examples/invalid/invalid_await.fg
fn main():
    value := await 42
    print(value.to_string())
